--- a/_includes/block/horizontal-scroll-spaces.html
+++ b/_includes/block/horizontal-scroll-spaces.html
@@ -1,8 +1,8 @@
 
 <section class="px-0 cssSlider">
-  <div class="px-side mb-8 ">
+  <div class="px-side mb-16">
       <div class="max-w-[{{block.block-content-max-width}}]">
-          <div>
+          <div class="text-center mx-auto " style="max-width: 600px;">
             {% if noH1 == true %}
             {{block.block-content-html | replace: 'h2','h1'}}
             {% else %}
