--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,8 +84,8 @@
 </head>
 
 <body>
-  <div class="scheme-header absolute w-full top-0 z-50" id="header">
-  <header class="bg-base lg:!bg-transparent text-white">
+  <div class="absolute w-full top-0 z-50" id="header" style="--text-color: {{page.header.text-color}}; --bg-color: {{page.header.background-color-mobile}}">
+  <header class="bg-base lg:!bg-transparent">
     <div class="max-width flex justify-center items-center py-4 relative z-[999]">
       
       <div class="lg:hidden">
