--- a/_includes/block/contact.html
+++ b/_includes/block/contact.html
@@ -2,7 +2,7 @@
 <section class="contact-form">
       <div class="max-width">
           <div class="mx-auto mb-12">
-            <h2>Get in touch</h2>
+            <h2 class="large- heading">Get in touch</h2>
           </div>
             <form method="post" action="/success" class="mx-auto grid grid-cols-2 gap-x-16 gap-y-12">
               <div class="col-span-2">
@@ -27,7 +27,7 @@
               <input type="hidden" name="_to" value="#">
               <input type="text" name="_gotcha" style="display: none;">
             <div class="text-center scheme-dark col-span-2">
-              <input class="border border-[currentcolor] inline-block bg-base border-solid px-5 py-2 w-min" type="submit" value="Send Message">
+              <input class="border border-[currentcolor] inline-block bg-base border-solid px-8 py-3 w-min" type="submit" value="Send Message">
 
             </div>
           </form>
