--- a/_includes/block/events-block.html
+++ b/_includes/block/events-block.html
@@ -14,7 +14,7 @@
             <div class="col-span-5 flex justify-center items-center p-8 scheme-base bg-base">
               <div>
                 <h3 class="sub-heading">{{event.sub-heading}}</h3>
-                <h3 class="large-heading">{{event.heading}}</h3>
+                <h3 class="large-heading heading">{{event.heading}}</h3>
                 {{event.full-description}}
                 <a href="{{event.button-link}}" class="button-featured">{{event.button-text}}</a>
 
