--- a/_includes/block/newsletter-form.html
+++ b/_includes/block/newsletter-form.html
@@ -10,7 +10,7 @@
 
           </div>
 
-            {% if block.content.heading %}<h2 class="pb-0 mb-0">{{block.content.heading}}</h2>{% endif %}
+            {% if block.content.heading %}<h2 class="pb-0 my-0 large-heading">{{block.content.heading}}</h2>{% endif %}
             <form action="" class="grid grid-cols-1 md:grid-cols-4 gap- 4 max-w-4xl mx-auto scheme-base">
               <input type="text" placeholder="First Name" name="first-name" id="first-name" class="p-2 border border-gray-400 border-r-0 bg-base">
               <input type="text"placeholder="Last Name" name="last-name" id="last-name" class="p-2 border bg-base border-gray-400 border-r-0">
