--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,6 +481,9 @@ video {
 .inset-0 {
   inset: 0px;
 }
+.-top-2 {
+  top: -0.5rem;
+}
 .bottom-0 {
   bottom: 0px;
 }
@@ -573,6 +576,10 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .\!mb-0 {
   margin-bottom: 0px !important;
@@ -832,6 +839,10 @@ video {
   -moz-column-gap: 4rem;
        column-gap: 4rem;
 }
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
 .gap-y-12 {
   row-gap: 3rem;
 }
@@ -940,6 +951,10 @@ video {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .px-side {
   padding-left: var(--side-gap);
   padding-right: var(--side-gap);
@@ -955,6 +970,10 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -979,9 +998,6 @@ video {
 }
 .pb-small {
   padding-bottom: var(--small-padding);
-}
-.pr-16 {
-  padding-right: 4rem;
 }
 .pt-0 {
   padding-top: 0px;
@@ -1010,10 +1026,6 @@ video {
 }
 .leading-\[1\.7\] {
   line-height: 1.7;
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1089,17 +1101,9 @@ h3,h4,h5,h6,.small-heading {
   text-wrap: balance;
 }
 
-.large-heading {
-  font-size: 2rem;
-}
 
-.sub-heading {
-font-family: var(--heading-font-sans-family);
-  font-size: 1.2rem;
-  font-weight: bold;
-  letter-spacing: 0.12em; 
-  text-transform: uppercase;
-}
+
+
 
 h1, h2,.heading  {
   font-family: var(--heading-font-serif-family);
@@ -1140,6 +1144,18 @@ p:last-child{
   margin-bottom:0;
 }
 
+.sub-heading {
+font-family: var(--heading-font-sans-family);
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 0.12em; 
+  text-transform: uppercase;
+}
+
+.large-heading {
+  font-size: 2rem;
+}
+
 
 p,li {
   font-size: 0.9rem;
@@ -1152,9 +1168,10 @@ body ul{
   margin-left: 1rem;
 }
 
-.bg-base{
+html body .bg-base{
   background-color: var(--bg-color);
   color: var(--text-color);
+  border-color: var(--bg-color);
 }
 
   #animated-text {
@@ -1211,7 +1228,7 @@ textarea:focus, textarea:focus-within{
 
 .contact-form input, .contact-form textarea {
   border: 2px solid var(--text-color);
-  padding: 2rem 1rem;
+  padding: 2rem 4rem;
   margin-bottom: 0;
 }
 
