regent with terry changes

--- a/_includes/block/grid-simple-2-col-overlap.html
+++ b/_includes/block/grid-simple-2-col-overlap.html
@@ -1,5 +1,5 @@
 
-<section class="flex justify-center items-center">
+<section class="flex justify-center items-center px-0">
       <div class="max-width
       {% case block.text-alignment %}
       {% when 'right' %}
@@ -9,18 +9,15 @@
       {% else %}
       {% endcase %}">
           <div class="">
-            <div class="grid md:grid-cols-3 gap-12">
-              <div class="col-span-2 {% if block.desktop-image-position == 'right' %} md:order-2 {% endif %}">
+            <div class="grid lg:grid-cols-3 gap-12">
+              <div class="col-span-2 {% if block.desktop-image-position == 'right' %} lg:order-2 {% endif %}">
                 <div class="relative mb-16 w-screen max-w-full img-holder">
-                  <img class="h-full w-[80%] md:w-[120%] md:max-w-[120%] absolute top-0 {% if block.desktop-image-position == 'right' %} right-side {% else %}  left-side {% endif %} bottom-0" src="{{block.image}}" alt="{{block.image-alt}}">
+                  <img class="h-full w-[80%] lg:w-[120%] lg:max-w-[120%] object-cover absolute top-0 {% if block.desktop-image-position == 'right' %} right-0 xl:right-side {% else %}  xl:left-side {% endif %} bottom-0" src="{{block.image}}" alt="{{block.image-alt}}">
                 </div>
               </div>
-               <div class="scheme-{{block.text-column.color-scheme}} bottom-ver {% if block.desktop-image-position == 'left' %} right-side left-[20vw] {% else %}  left-side right-20vw {% endif %} absolute w-[calc(100vw_-_20vw_-_var(--side-gap))] md:w-full md:inset-0 md:relative z-10 self-end">
+               <div class="scheme-{{block.text-column.color-scheme}} bottom-ver {% if block.desktop-image-position == 'left' %} right-side {% else %} left-side {% endif %} absolute w-[calc(40vw_-_var(--side-gap))] lg:w-full lg:relative z-10 self-end">
                 <div class="bg-base p-8">
                   {{block.text-column.block-content-html}}
-                  <p class="flex gap-6 items-center">
-                    <a href="#" class="button-featured uppercase">reserve</a> <a href="#">VIEW MORE</a>
-                  </p>
                 </div>
               </div>
             </div>
@@ -35,11 +32,11 @@
 
 
      #section-{{forloop.index}} .img-holder {
-        aspect-ratio: 1;
+        aspect-ratio: 283/169;
       }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   #section-{{forloop.index}}    .img-holder {
-        aspect-ratio: 19/10;
+        aspect-ratio: 283/169;
       }
     }
 </style>
