--- a/_includes/snippets/col-text.html
+++ b/_includes/snippets/col-text.html
@@ -15,7 +15,7 @@
         {% endif %}
             {% if col.icon-path %}
             <div class="mb-small {% unless col.img_aspect == 'Original' %} relative" style="aspect-ratio: {% include logic/aspect-logic.html aspect = col.img_aspect %}; {% endunless %}">
-                <img class="icon {% unless col.img_aspect == 'Original' %} absolute w-full h-full inset-0 object-cover object-center  {% endunless %} " src="{{col.icon-path}}" alt="{{col.icon-alt}}"loading="lazy">
+                <img class="icon mx-auto {% unless col.img_aspect == 'Original' %} absolute w-full h-full inset-0 object-cover object-center  {% endunless %} " src="{{col.icon-path}}" alt="{{col.icon-alt}}" loading="lazy">
             </div>
             {% endif %}
             <div
@@ -37,3 +37,10 @@
             
     
 </div>
+
+<style>
+    .icon {
+        width: 50%;
+        min-width: 4rem;
+    }
+</style>
