--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -15,7 +15,7 @@
           </div>
       </div>
     </div>
-    <div class="gap-[12px] flex flex-nowrap overflow-scroll no-scrollbar scroll-container scheme-{{block.scroll-items-color-scheme}}" {% if block.max-width %} style="max-width:  {{block.max-width}} 500px"{% endif %}>
+    <div class="gap-6 flex flex-nowrap overflow-scroll no-scrollbar scroll-container scheme-{{block.scroll-items-color-scheme}}" {% if block.max-width %} style="max-width:  {{block.max-width}} 500px"{% endif %}>
 
 
       {% for col in block.scroll-items %}
