--- a/_includes/block/newsletter-form.html
+++ b/_includes/block/newsletter-form.html
@@ -11,14 +11,14 @@
           </div>
 
             {% if block.content.heading %}<h2 class="pb-0 my-0 large-heading">{{block.content.heading}}</h2>{% endif %}
-            <form action="" class="grid grid-cols-1 md:grid-cols-4 gap- 4 max-w-4xl mx-auto scheme-base">
-              <input type="text" placeholder="First Name" name="first-name" id="first-name" class="p-2 border border-gray-400 border-r-0 bg-base">
-              <input type="text"placeholder="Last Name" name="last-name" id="last-name" class="p-2 border bg-base border-gray-400 border-r-0">
-              <input type="text" placeholder="Email Address" name="email" id="email" class="p-2 border bg-base border-gray-400 border-r-0">
+            <form action="" class="grid md:grid-cols-4 gap-y-1 max-w-4xl mx-auto scheme-base">
+              <input type="text" placeholder="First Name" name="first-name" id="first-name" class="p-2 border !border-gray-400 border-r-0 bg-base block">
+              <input type="text"placeholder="Last Name" name="last-name" id="last-name" class="p-2 border bg-base !border-gray-400 border-r-0 block">
+              <input type="text" placeholder="Email Address" name="email" id="email" class="p-2 border bg-base !border-gray-400 border-r-0 block">
               <div class="scheme-dark">
                 <input type="submit" value="Stay Connected" class="p-2 border bg-base">
               </div>
-              <label for="consent" class="col-span-4 text-sm flex justify-center gap-2">
+              <label for="consent" class="md:col-span-4 text-sm flex justify-center gap-2">
                 <input type="checkbox" name="consent" id="consent" class="inline w-auto"> Reagent has permission to send me emails.
               </label>
 
