--- a/_includes/block/split-banner-slider.html
+++ b/_includes/block/split-banner-slider.html
@@ -30,9 +30,14 @@
              {% if block.content.subHeading %}<h3 class="sub-heading">{{block.content.subHeading}}</h3>{% endif %}
             {% if block.content.heading %}<h2 class="heading-lg">{{block.content.heading}}</h2>{% endif %}
             {{block.content.p-text}}
+            <div class="flex">
+              <div>
             {% for button in block.content.buttons %}
-            <p class="scheme-{{button.button-color}}"><a href="{{button.url}}" class="button-featured bg-base">{{button.text}}</a></p>
+              <p class="scheme-{{button.button-color}}"><a href="{{button.url}}" class="button-featured bg-base w-full text-center">{{button.text}}</a></p>
+
             {% endfor %}
+          </div>
+        </div>
       </div>
     <style>
      
