addeded inital offers

--- a/_includes/block/horizontal-scroll-spaces.html
+++ b/_includes/block/horizontal-scroll-spaces.html
@@ -27,16 +27,16 @@
             <div class="p-4">
               {{col.block-content-html}}
               <div class="grid" style="grid-template-columns: 140px 1fr;">
-                  <p>SIZE</p>
-                  <p>{{col.size}}</p>
-                  <p>CAPACITY</P>
-                  <p>{{col.capacity}}</p>
-                  <p>BANQUET</P>
-                  <p>{{col.banquet}}</p>
-                  <p>RECEPTION</p>
-                  <p>{{col.reception}}</p>
-                  <p>LONG TABLE</p>
-                  <p>{{col.long-table}}</p>
+                  <p class="engravers-gothic">SIZE</p>
+                  <p class="engravers-gothic">{{col.size}}</p>
+                  <p class="engravers-gothic">CAPACITY</P>
+                  <p class="engravers-gothic">{{col.capacity}}</p>
+                  <p class="engravers-gothic">BANQUET</P>
+                  <p class="engravers-gothic">{{col.banquet}}</p>
+                  <p class="engravers-gothic">RECEPTION</p>
+                  <p class="engravers-gothic">{{col.reception}}</p>
+                  <p class="engravers-gothic">LONG TABLE</p>
+                  <p class="engravers-gothic">{{col.long-table}}</p>
                   
                     
                 </div>
