--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,7 +140,7 @@
 
       </nav>
       
-      <a href="#" class="absolute xl:static top-16 right-0 button-featured ml-[15px] !hidden md:!block" style="background-color: {{page.header.button-bg}}; color: {{page.header.button-text-color}}">Book Now</a>
+      <a href="#" class="absolute xl:static right-0 button-featured ml-[15px] !hidden md:!block" style="background-color: {{page.header.button-bg}}; color: {{page.header.button-text-color}}">Book Now</a>
 
 
     </div>
