--- a/_includes/block/offset-grid.html
+++ b/_includes/block/offset-grid.html
@@ -17,7 +17,7 @@
       </div>
       <div class="flex flex-col justify-start md:min-h-[25vw] md:max-h-[50vh] md:order-4">
         <div>
-          {% if block.content-2.subHeading %}<h3>{{block.content-2.subHeading}}</h3>{% endif %}
+          {% if block.content-2.subHeading %}<h3 class="sub-heading">{{block.content-2.subHeading}}</h3>{% endif %}
           {% if block.content-2.heading %}<h2 class="heading-lg">{{block.content-2.heading}}</h2>{% endif %}
           {{block.content-2.p-text}}
         </div>
