--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -2,18 +2,18 @@
 <section>
       <div class="max-width w-full">
         {% for style in block.room-style %}
-        <div class="scheme-base style-set {% unless forloop.first %} mt-vert {% endunless %}">
+        <div class="scheme-base style-set {% unless forloop.first %} mt-vert {% endunless %} pb-16">
           <div class="flex justify-between flex-wrap">
-            <h2 class="shrink-0 sub-heading large-heading my-0 relative -top-2">{{style.heading}}</h2>
+            <h2 class="shrink-0 sub-heading my-0 relative -top-2">{{style.heading}}</h2>
             <div class="shrink-0 flex justify-end flex-wrap max-w-full grow">
               {% for room in style.rooms %}
-              <span class="button bg-base filter-button {% if forloop.first %} active {% endif %}" data-filter="{{forloop.index0}}">{{room.name}}</span>
+              <span class="bg-base filter-tab {% if forloop.first %} active {% endif %}" data-filter="{{forloop.index0}}">{{room.name}}</span>
               {% endfor %}
             </div>
           </div>
           <div>
 
-            <div class="grid grid-cols-2 gap-4 bg-base">
+            <div class="grid md:grid-cols-2 gap-4 bg-base">
               <div class="relative" style="aspect-ratio: 217/148;">
                 <img class="h-full w-full inset-0 absolute object-cover object-center" src="{{style.img}}" alt="{{style.heading}}">
               </div>
@@ -21,8 +21,8 @@
               <div class="filter-target bg-base {% if forloop.first %} active {% endif %} items-center p-8">
                 <div>
                   
-                  <h2 class="large-heading">{{room.name}}</h2>
-                  <div class="flex gap-x-8 flex-wrap">
+                  <h2 class="">{{room.name}}</h2>
+                  <div class="flex gap-x-8 flex-wrap text-sm engravers-gothic mb-4">
                     <span class="whitespace-nowrap">
                       {{room.size}} SQ/FT
                     </span>
@@ -61,14 +61,18 @@
        #section-{{forloop.index}} section{
         min-height: {{block.min-height}};
       }
-
-.filter-button {
-transition: all .5s;
-border-color:#D5E3DD
+ 
+.filter-tab {
+  transition: all .5s;
+  border-color:#D5E3DD;
+  border: 1px solid;
+  font-size: 0.8rem;
+  padding: 0.5rem 2rem;
 }
 
-.filter-button:not(.active) {
-  background-color: #D5E3DD;
+.filter-tab:not(.active) {
+  background-color: #E1EAE5;
+  border-color: #D5E3DD
   /* color: var(--colored-button-text); */
 }
 
