--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,10 +50,23 @@
       src: url('/fonts/Canela-Text-Family/CanelaText-Light-Trial.otf') format('opentype');
   }
 
+
   @font-face {
-      font-family: 'Engravers-gothic'; 
-      src: url('/fonts/engravers-gothic-regular.otf') format('opentype');
-  }
+  font-family: "Engravers-gothic";
+  src: url("/fonts/EngraversGothic-Ext.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Engravers Bold */
+@font-face {
+  font-family: "Engravers-gothic";
+  src: url("/fonts/EngraversGothic-BoldExt.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
     :root{
         --max-width: {{site.data.style.max-width}}px;
