--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -520,9 +520,6 @@ video {
 .top-12 {
   top: 3rem;
 }
-.top-16 {
-  top: 4rem;
-}
 .top-4 {
   top: 1rem;
 }
@@ -955,6 +952,10 @@ video {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -962,10 +963,6 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 .px-side {
   padding-left: var(--side-gap);
@@ -982,10 +979,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -1004,6 +997,9 @@ video {
 }
 .pb-12 {
   padding-bottom: 3rem;
+}
+.pb-16 {
+  padding-bottom: 4rem;
 }
 .pb-\[100\%\] {
   padding-bottom: 100%;
@@ -1157,10 +1153,10 @@ p:last-child{
 }
 
 .sub-heading {
-font-family: var(--heading-font-sans-family);
   font-size: 1.2rem;
-  font-weight: bold;
-  letter-spacing: 0.12em; 
+  font-family: var(--heading-font-sans-family);
+  font-weight: 500;
+  letter-spacing: 0.10em; 
   text-transform: uppercase;
 }
 
@@ -1244,10 +1240,9 @@ textarea:focus, textarea:focus-within{
   margin-bottom: 0;
 }
 
-/* editor styles for none content uses */
-
-.heading-md {
-  font-size: 1.6rem;
+.contact-form input[type="submit"] {
+  padding: 1rem 2rem;
+  font-family: var(--heading-font-sans-family);
 }
 
 .heading-lg {
