--- a/style.css
+++ b/style.css
@@ -95,10 +95,10 @@ p:last-child{
 }
 
 .sub-heading {
-font-family: var(--heading-font-sans-family);
   font-size: 1.2rem;
-  font-weight: bold;
-  letter-spacing: 0.12em; 
+  font-family: var(--heading-font-sans-family);
+  font-weight: 500;
+  letter-spacing: 0.10em; 
   text-transform: uppercase;
 }
 
@@ -182,10 +182,9 @@ textarea:focus, textarea:focus-within{
   margin-bottom: 0;
 }
 
-/* editor styles for none content uses */
-
-.heading-md {
-  font-size: 1.6rem;
+.contact-form input[type="submit"] {
+  padding: 1rem 2rem;
+  font-family: var(--heading-font-sans-family);
 }
 
 .heading-lg {
