--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -14,8 +14,11 @@
           <div>
 
             <div class="grid md:grid-cols-2 gap-4 bg-base">
-              <div class="relative" style="aspect-ratio: 217/148;">
-                <img class="h-full w-full inset-0 absolute object-cover object-center" src="{{style.img}}" alt="{{style.heading}}">
+              <div class="relative">
+                <div style="aspect-ratio: 217/148;">
+                  <img class="h-full w-full inset-0 absolute object-cover object-center" src="{{style.img}}" alt="{{style.heading}}">
+                </div>
+
               </div>
               {% for room in style.rooms %}
               <div class="filter-target bg-base {% if forloop.first %} active {% endif %} items-center p-8">
