--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -873,6 +873,9 @@ video {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.\!border-0 {
+  border-width: 0px !important;
+}
 .border {
   border-width: 1px;
 }
@@ -1009,9 +1012,6 @@ video {
 }
 .pt-0 {
   padding-top: 0px;
-}
-.pt-8 {
-  padding-top: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1527,11 +1527,12 @@ float: right
 
 .burger-button {
   position: absolute;
-  top: 4rem;
+  top: 3rem;
   left: var(--side-gap);
   z-index: 901;
   padding: 8px;
   border: 0px;
+  margin-top: 0;
   }
   /*this is where you can change the color of the buttons*/
   .burger-button span{
