--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -471,9 +471,10 @@ tickerBanners.forEach(banner => {
            prevArrow:  `<button type="button" class="slick-prev" aria-label="scroll-left"><svg width="15px" height="15px" viewBox="0 0 24 24" stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" color="var(--text-color)"><path d="M21 12L3 12M3 12L11.5 3.5M3 12L11.5 20.5" stroke="var(--text-color)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>`,
            nextArrow: `<button type="button" class="slick-next" aria-label="scroll-right"><svg width="15px" height="15px" viewBox="0 0 24 24" stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" color="var(--text-color)"><path d="M3 12L21 12M21 12L12.5 3.5M21 12L12.5 20.5" stroke="var(--text-color)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>`,
             slidesToShow: 1,
+            initialSlide: 1,
             appendArrows: $('.slick-nav'),
             appendDots: $('.slick-nav'),
-            centerMode: false,
+            centerMode: true,
             variableWidth: true,
           });
           
@@ -491,6 +492,8 @@ tickerBanners.forEach(banner => {
            arrows: true,
            slidesToShow: {{block.slider_column_count}},
            slidesToScroll: 1,
+           initialSlide: 1,
+           
            dragable: true,
            infinite: true,
            speed: 500,
