--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,6 +579,10 @@ video {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -702,6 +706,9 @@ video {
 .h-full {
   height: 100%;
 }
+.min-h-\[50vh\] {
+  min-height: 50vh;
+}
 .min-h-full {
   min-height: 100%;
 }
@@ -772,6 +779,9 @@ video {
 }
 .grow {
   flex-grow: 1;
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer {
   cursor: pointer;
@@ -980,6 +990,10 @@ video {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .px-side {
   padding-left: var(--side-gap);
   padding-right: var(--side-gap);
@@ -1034,6 +1048,9 @@ video {
 }
 .text-right {
   text-align: right;
+}
+.text-\[0px\] {
+  font-size: 0px;
 }
 .text-sm {
   font-size: 0.875rem;;
@@ -1126,14 +1143,15 @@ h3,h4,h5,h6,.small-heading {
 
 
 
-h1, h2,.heading  {
+h1, h2,.heading,.h2  {
   font-family: var(--heading-font-serif-family);
   font-weight: 300;
   line-height: 1.2;
   text-wrap: balance;
+  text-transform: none;
 }
 
-h2,.heading {
+h2,.heading,.h2 {
   font-size: 1.5rem;
 }
 
@@ -1844,7 +1862,9 @@ float: right
     margin-left: -7px;
   }
 
-.slick-nav .slick-dots li button::before {
+
+  
+.slick-nav .slick-dots li button::before  {
   color: transparent;
   background-color: transparent;
   border: 1px solid #fff;
