index design tweaks

--- a/_includes/block/highlights.html
+++ b/_includes/block/highlights.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="mx-auto w-2/3 -top-12 bg-base relative p-8">
-          <h3 class="heading-lg h2">{{highlight.heading}}</h3>
+          <h3 class="heading-lg h2 mt-0">{{highlight.heading}}</h3>
           <p>{{highlight.text}}</p>
           {% if highlight.button-text and highlight.link %}
           <a href="{{highlight.link}}">{{highlight.button-text}}</a>
