--- a/_includes/block/slider-split-banner.html
+++ b/_includes/block/slider-split-banner.html
@@ -29,9 +29,12 @@
             </picture>
             
           </div>
-          <div class="text-block p-8">       
-            {{col.block-content-html}}
-            <a href="{{col.button-link}}" class="button-featured inline-block mb-8">{{col.button-text}}</a>
+          <div class="text-block p-8 flex flex-col justify-center items-center">
+            <div>
+              {{col.block-content-html}}
+              <a href="{{col.button-link}}" class="button-featured inline-block mb-8">{{col.button-text}}</a>
+
+            </div>       
           </div>
         </div>
       </div>
