--- a/_includes/block/highlights.html
+++ b/_includes/block/highlights.html
@@ -5,7 +5,7 @@
     <h2 class="heading-lg">{{block.heading}}</h2>
     <div class="highlight-btn text-center">
       {% for button in block.highlights %}
-        <span class="cursor-pointer mx-4 uppercase {% if forloop.first %} active {% endif %}">{{button.nav-heading}}</span>
+        <span class="cursor-pointer mx-4 uppercase {% if forloop.first %} active {% endif %} engravers-gothic">{{button.nav-heading}}</span>
       {% endfor %}
     </div>
   </div>
